fix(styling): ensure margins collapse and make toggle button a little bit smaller

--- a/src/client/styles/layout/host.scss
+++ b/src/client/styles/layout/host.scss
@@ -2,11 +2,11 @@
  * HOST
  *******/
 :host {
-	// paint prevents popover inside
-	// content from being over everything
-	contain: layout style;
+	// layout prevents margins from collapsing
+	// paint prevents popover inside content from being over everything
+	contain: style;
 	display: block;
-	margin-bottom: 15px;
+	margin-bottom: 18px;
 }
 :host([hidden]) {
 	display: none;
