--- a/src/client/styles/layout/states.scss
+++ b/src/client/styles/layout/states.scss
@@ -1,11 +1,6 @@
 /***************************
  * STATES (open and closed)
  ***************************/
-.open {
-	rb-button {
-		margin-bottom: 12px;
-	}
-}
 .closed {
 	.content {
 		display: none;
